# ds-pg-restore

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-swarm.yml  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
ds_pg_restore/: Settings.py  logger.py  main.py  restore_database.py
