[project]
name = "ds-pg-restore"
version = "0.1.0"
description = "Simple tool to restore a postgres database from a SQL dump file stored in S3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "boto3>=1.35.86",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "types-boto3>=1.35.86",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
packages = "ds_pg_restore"
ignore_missing_imports = false
explicit_package_bases = true
check_untyped_defs = true
strict_optional = true
plugins = "pydantic.mypy"
